# nygardsvikveien

./: README.md  main.py  pyproject.toml
data/: svar_kommune.txt
docs/: endringsnotat-arkitekt.md  redegjorelse-kpa-8-2-9.md  sjekkliste-revidert-innsending.md
output/text/: 12581-5400 Rapport Områdestabilitet.txt  A-10 01 Situasjonsplan.txt  A-100 02 Illustrasjoner.txt  A-20 01 Terrengprofil.txt  A-20 02 Terrengprofil garasje.txt  A-20 03 Terrengprofiler m eksisterende bygg.txt  A-30 01 Plan 01.txt  A-30 02 Plan 02.txt  A-30 03 Plan 03.txt  A-30 20 BRA.txt  A-30 21 BYA.txt  A-40 01 Snitt.txt  A-50 01 Fasader Sør og øst.txt  A-50 01 Fasader.txt  A-50 02 Fasader nord og vest.txt  A-50 03 Fasader.txt  Dispensasjonssøknad.txt  ErklæringOmAnsvarsrett-PRO_ROLV EIDE AS.txt  Forhåndsuttalelse fra Bergen Vann for private VA-anlegg Gnr 149 bnr 162 NYGÅRDSVIKVEIEN 38.txt  Garasje - A-30 02 Plan og Snitt.txt  Garasje - A-50 01 Fasader.txt  Gjennomføringsplan.txt  Kvittering-for-nabovarsel-1-20251210-0826.txt  Nabovarsel-1-20251210-0826.txt  OV Notat.txt  Søknad om rammetillatelse.txt  Tiltakshavers_samtykke_e00b9b4c-fde9-4f00-9fdc-b7971745e5b3.txt  Utskrift grunnbok.txt  Vedleggsopplysninger.txt
scripts/: extract_pdfs.py  generate_concept.py
